BSAF-127: TaskMonitor and TaskService now use a new class, Journal, to improve performance.
git-svn-id: https://svn.kenai.com/svn/bsaf~main/framework/trunk@228 39130dca-0e0f-c9f4-f3e0-9e7262a0d940